# dumbflow-server

./: conf.example.toml  pyproject.toml
dumbflow_server/: app_factory.py  wsgi.py
dumbflow_server/middlewares/: db_session.py
dumbflow_server/models/: __init__.py  base.py  job.py  workflow.py
dumbflow_server/resources/: jobs.py  workflows.py
dumbflow_server/util/: amqp.py  config.py
migrations/: env.py
migrations/versions/: 63dc87c73366_initial_version.py  da0f83538699_initial_states.py
tests/: test_dumbflow_server.py
