[tool.poetry]
name = "dumbflow-server"
version = "0.1.0"
description = ""
authors = ["Yuri Vasquez <yuri.vasquez91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
falcon = "^1.4"
sqlalchemy = "^1.3"
jsonschema = "^3.0"
toml = "^0.10.0"
pika = "^1.0"
inflection = "^0.3.1"
mysqlclient = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.3"
isort = "^4.3"
mypy = "^0.701.0"
yapf = "^0.27.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
